Fix header alignment issues across all pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ p, h1, h2, h3, h4 {
     color: var(--mu-orange);
 }
 
-#makeuse-logo-wrap {
+.makeuse-logo-wrap {
     display: flex;
     place-self: center;
     place-items: center;
@@ -891,32 +891,20 @@ img {
         margin: 0 auto;
         height: 153px;
         justify-content: center;
-
         height: 160px;
     }
 
-    .landing-nav {
-        /* position: absolute; */
-        top: 0;
-        /* height: 200px; */
-        width: 100%;
-        text-align: center;
-        display: flex;
+    #makeuseheader-landing {
         background: none;
-        /* align-items: center; */
-        /* justify-content: space-between; */
     }
 
-    /* #makeuseheader {
-        position: relative;
-        height: 200px;
+    .landing-nav {
+        top: 0;
         width: 100%;
         text-align: center;
         display: flex;
         background: none;
-        align-items: center;
-        justify-content: space-between;
-    } */
+    }
     
     nav {
         display: flex;
@@ -927,7 +915,7 @@ img {
     }
 
     .navbar {
-        display: flex;
+        /* display: flex; */
         width: 100%;
         height: 153px;
         height: 160px;
